--- a/wwr/site-plan.html
+++ b/wwr/site-plan.html
@@ -19,18 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p style= "font-family:'Times New Roman', Times, serif ; color: rgba(182, 4, 4, 0.658);">You want to learn how to create incredible edits with this two programs and let out your creativity? this is the perfect place to start, in this page we would start by explaining what is Photoshop and Premiere Pro to then tell you how it works and the incredible things you can do with it</p>
+    <p style= "font-family:'Times New Roman', Times, serif ; color: rgba(182, 4, 4, 0.658);">This adventure is only for the braves and those who would risk their life for the biggest adventure of their life, are you prepair for it?</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p style="font-family:inherit; color: rgb(209, 59, 0);">Your are probably wondering for who is this webpage, and is for everyone who has this tools and want to release their creativity and maybe in the future earn money from it, cause you can do it, Premiere Pro and Photoshop can be complicated at start, but here we would tell that, is not what you think</p>
+    <p style="font-family:inherit; color: rgb(209, 59, 0);">be mentally and physically prepare for the biggest adventure of your life, are ready for it?</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="mini.jpg" />
+    <img src="wwr.jpg" />
     <hr />
     <h2>Style Guide</h2>
 
