--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
         <a id="logo_link" href="index.html"></a>
-        <img class= "logo" src="images/logo.png" width="100" height="auto" alt="wild experience logo">
+        <img class= "logo" src="images/logo.png" width="100"  alt="wild experience logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -33,15 +33,15 @@
 <main class="home-grid">
     <section class="rivers-card">
         <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-        <img class="icon" src="images/rapids_icon.png" width="200" height="auto" alt="river icon">
+        <img class="icon" src="images/rapids_icon.png" width="200"  alt="river icon">
         <h2>Rivers</h2>
     </section>
     <section class="camping card">
-        <img class="card-img" src="images/camping.jpg" width="300" height="auto" alt="tent in mountains">
-        <img class="icon" src="images/fire_icon.png" width="200" height="auto" alt="oars icon">
+        <img class="card-img" src="images/camping.jpg" width="300"  alt="tent in mountains">
+        <img class="icon" src="images/fire_icon.png" width="200"  alt="oars icon">
         <h2>Rapids</h2>
     </section>
-    <img class="mountains" src="images/mountains.jpg" width="300" height="auto" alt="Misty mountains">
+    <img class="mountains" src="images/mountains.jpg" width="300"  alt="Misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p>Enjoy the breathtaking scenery. From valeys, meadows, canyons, and high peaks: it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -54,13 +54,13 @@
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
         <a href="https://facebook.com">
-            <img src="images/facebook.png" width="50" height="auto" alt="fb icon">
+            <img src="images/facebook.png" width="50"  alt="fb icon">
         </a>
         <a href="https://twitter.com">
-            <img src="images/twitter.png" width="50" height="auto" alt="twitter icon">
+            <img src="images/twitter.png" width="50"  alt="twitter icon">
         </a>
         <a href="https://instagram.com">
-            <img src="images/instagram.png" width="50" height="auto" alt="instagram icon">
+            <img src="images/instagram.png" width="50"  alt="instagram icon">
         </a>
     </div>
 </footer>   
