--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
         <a id="logo_link" href="index.html"></a>
-        <img class= "logo" src="images/logo.png" width="100"  alt="wild experience logo">
+        <img class= "logo" data-src="images/logo.png" width="100"  alt="wild experience logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
@@ -19,7 +19,7 @@
         </nav>
 </header>
 <div id="hero">
-    <div id="hero-image" src="images/hero.jpg" alt="People enjoying white water rafting">   
+    <div id="hero-image" data-src="images/hero.jpg" title="People enjoying white water rafting">   
 </div>
 <section id="hero-msg">
     <h1 class="home-title">Have An Adventure</h1>
