--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Home</title>
+    <link rel="stylesheet" href="styles/style.css"
 </head>
 <body>
 <header>
@@ -32,7 +33,7 @@
 <main class="home-grid">
     <section class="rivers-card">
         <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-        <img class="icon" src="images/rapids_icon.png" width="200"  alt="river icon">
+        <img class="icon" src="images/rapids_icon.png"  alt="river icon">
         <h2>Rivers</h2>
     </section>
     <section class="camping card">
@@ -52,13 +53,13 @@
     <p><a href="site-plan.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" width="50"  alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" width="50"  alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" width="50"  alt="instagram icon">
         </a>
     </div>
