--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
         <a id="logo_link" href="index.html"></a>
-        <img class= "logo" data-src="images/logo.png" width="100"  alt="wild experience logo">
+        <img class="logo" src="images/logo.png" alt="logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
