--- a/wwr/site-plan.html
+++ b/wwr/site-plan.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1 style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; color: rgb(150, 3, 163);">Wild Water, you against nature</h1>
-    <h2 style="color:aquamarine">Efrain Jonathan Martinez</h2>
-    <h2 style="font-family: 'Courier New', Courier, monospace;">WDD 130-06</h2>
+    <h1>Wild Water, you against nature</h1>
+    <h2>Efrain Jonathan Martinez</h2>
+    <h2>WDD 130-06</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
