--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <header>
-        <a id="logo_link" href="index.html"></a>
-        <img class="logo" src="images/logo.png" alt="logo">
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="images/logo.png" alt="logo">
+        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
@@ -20,8 +21,9 @@
         </nav>
 </header>
 <div id="hero">
-    <div id="hero-image" data-src="images/hero.jpg" title="People enjoying white water rafting">   
-</div>
+    <div id="hero-box">
+       <img id="hero-image" src="./images/hero.jpg" title="People enjoying white water rafting">   
+    </div>
 <section id="hero-msg">
     <h1 class="home-title">Have An Adventure</h1>
     <h4>Make Memories with Dry Oar </h4>
@@ -39,8 +41,13 @@
     <section class="camping card">
         <img class="card-img" src="images/camping.jpg" width="300"  alt="tent in mountains">
         <img class="icon" src="images/fire_icon.png" width="200"  alt="oars icon">
-        <h2>Rapids</h2>
+        <h2>Camping</h2>
     </section>
+    <section class="rapids-card">
+        <img class="card-img" src="./images/lava.jpg" alt="rafting boat">
+        <img class="icon" src="./images/loop.jpg" alt="oars icon"
+    </section>
+    <div id="background"></div>
     <img class="mountains" src="images/mountains.jpg" width="300"  alt="Misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
